--- a/swish.cabal
+++ b/swish.cabal
@@ -126,7 +126,8 @@ Library
       base >=3 && < 5,
       containers >= 0.4 && < 0.6,
       filepath >= 1.1 && < 1.4,
-      hashable == 1.1.*,
+      -- hashable == 1.1.*,
+      hashable >= 1.1 && < 1.3,
       mtl >= 2 && < 3,
       network >= 2.2 && < 2.5,
       old-locale == 1.0.*, 
