--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.9.0.1
+Version:            0.9.0.2
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -43,6 +43,10 @@ Description:
   * RDF formal semantics entailment rule implementation.
   .
   * Complete, ready-to-run, command-line and script-driven programs.
+  .
+  Changes in version @0.9.0.2@:
+  .
+  * Updated the upper bound on the polyparse dependency.
   .
   Changes in version @0.9.0.1@:
   .
@@ -93,7 +97,7 @@ Library
       mtl >= 2 && < 3,
       network >= 2.2 && < 2.5,
       old-locale == 1.0.*, 
-      polyparse >= 1.6 && < 1.9,
+      polyparse >= 1.6 && <= 1.9,
       semigroups >= 0.5 && < 0.10,
       text == 0.11.*,
       time >= 1.1 && < 1.5
