--- a/swish.cabal
+++ b/swish.cabal
@@ -97,7 +97,8 @@ Library
       base >=3 && < 5,
       containers >= 0.4 && < 0.6,
       filepath >= 1.1 && < 1.4,
-      hashable >= 1.1 && < 1.3,
+      -- Early versions of hashable 1.2 are problematic
+      hashable (>= 1.1 && < 1.2) || (>= 1.2.0.6 && <1.3),
       mtl >= 2 && < 3,
       network >= 2.2 && < 2.5,
       old-locale == 1.0.*, 
