--- a/swish.cabal
+++ b/swish.cabal
@@ -50,10 +50,10 @@ Description:
   specification; added minor improvements to error messages when
   given invalid syntax. As part of the upgrade, there is no longer a
   default namespace set up for the empty prefix and numeric literals
-  are no-longer converted into a 'canonical' form.
+  are no-longer converted into a canonical form.
   .
   * Turtle/N3 output: improved string formatting (better handling of
-  string literals with three or more consecutive @"@ characters); blank
+  string literals with three or more consecutive @\"@ characters); blank
   node handling has been improved but the output may not be as elegant.
   .
   * NTriples parser: now accepts upper-case language tags such as
@@ -66,6 +66,8 @@ Description:
   * The new @w3ctests@ flag will build the @runw3ctests@ executable,
   which will run the W3C Turtle tests (if downloaded from
   <http://www.w3.org/2013/TurtleTests/>).
+  .
+  * Minor fixes and additions to the documentation.
   .
   Changes in version @0.9.0.3@:
   .
