--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.9.0.4
+Version:            0.9.0.5
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -43,6 +43,16 @@ Description:
   * RDF formal semantics entailment rule implementation.
   .
   * Complete, ready-to-run, command-line and script-driven programs.
+  .
+  Changes in version @0.9.0.5@:
+  .
+  * Turtle/N3 output: more changes for string literals containing
+  double-quote characters.
+  .
+  * N3 Parser: parsing of string literals within three quote marks has
+  been updated to match the Turtle parser.
+  .
+  * Turtle Parser: a few more error messages have been added.
   .
   Changes in version @0.9.0.4@:
   .
