--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.9.0.5
+Version:            0.9.0.6
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -43,6 +43,10 @@ Description:
   * RDF formal semantics entailment rule implementation.
   .
   * Complete, ready-to-run, command-line and script-driven programs.
+  .
+  Changes in version @0.9.0.6@:
+  .
+  * Changed the test handling to use @test-framework@.
   .
   Changes in version @0.9.0.5@:
   .
@@ -231,7 +235,9 @@ Test-Suite test-builtinmap
       base,
       containers,
       HUnit == 1.2.*,
-      swish
+      swish,
+      test-framework,
+      test-framework-hunit == 0.3.*
 
 Test-Suite test-graphpartition
    type:       exitcode-stdio-1.0
@@ -247,7 +253,9 @@ Test-Suite test-graphpartition
       containers,
       HUnit,
       semigroups,
-      swish
+      swish,
+      test-framework,
+      test-framework-hunit == 0.3.*
 
 Test-Suite test-graph
    type:       exitcode-stdio-1.0
@@ -263,7 +271,9 @@ Test-Suite test-graph
       containers,
       hashable, 
       HUnit,
-      swish
+      swish,
+      test-framework,
+      test-framework-hunit == 0.3.*
 
 Test-Suite test-nt
    type:       exitcode-stdio-1.0
@@ -279,6 +289,8 @@ Test-Suite test-nt
       containers,
       HUnit,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-turtle
@@ -296,6 +308,8 @@ Test-Suite test-turtle
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-n3parser
@@ -313,6 +327,8 @@ Test-Suite test-n3parser
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-n3formatter
@@ -330,6 +346,8 @@ Test-Suite test-n3formatter
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-rdfdatatypexsdinteger
@@ -347,6 +365,8 @@ Test-Suite test-rdfdatatypexsdinteger
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-rdfgraph
@@ -365,6 +385,8 @@ Test-Suite test-rdfgraph
       network,
       old-locale,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text,
       time
 
@@ -383,6 +405,8 @@ Test-Suite test-rdfproofcontext
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-rdfproof
@@ -400,6 +424,8 @@ Test-Suite test-rdfproof
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-rdfquery
@@ -417,6 +443,8 @@ Test-Suite test-rdfquery
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-rdfruleset
@@ -434,6 +462,8 @@ Test-Suite test-rdfruleset
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
 Test-Suite test-varbinding
@@ -449,7 +479,9 @@ Test-Suite test-varbinding
       base,
       containers,
       HUnit,
-      swish
+      swish,
+      test-framework,
+      test-framework-hunit == 0.3.*
 
 Test-Suite test-qname
    type:       exitcode-stdio-1.0
@@ -466,6 +498,8 @@ Test-Suite test-qname
       HUnit,
       network,
       swish,
+      test-framework,
+      test-framework-hunit == 0.3.*,
       text
 
  -- we do not have the data files to run this test
