Turtle/N3 format: \f in string literals is now converted to \u000C (interoperability issue)

--- a/swish.cabal
+++ b/swish.cabal
@@ -46,6 +46,9 @@ Description:
   .
   Changes in version @0.9.0.6@:
   .
+  * Turtle/N3 output: @\f@ characters in literals are converted to
+  @\u000C@ to work around some interoperability issues.
+  .
   * Changed the test handling to use @test-framework@.
   .
   Changes in version @0.9.0.5@:
