--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.9.0.6
+Version:            0.9.0.7
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -44,10 +44,14 @@ Description:
   .
   * Complete, ready-to-run, command-line and script-driven programs.
   .
+  Changes in version @0.9.0.7@:
+  .
+  * Minor documentation fix for @Swish.RDF.Graph.quote@.
+  .
   Changes in version @0.9.0.6@:
   .
-  * Turtle/N3 output: @\f@ characters in literals are converted to
-  @\u000C@ to work around some interoperability issues.
+  * Turtle/N3 output: @\\f@ characters in literals are converted to
+  @\\u000C@ to work around some interoperability issues.
   .
   * Changed the test handling to use @test-framework@.
   .
